# r2b2-base

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
r2b2_base/: base_functions.py  base_node.py  odometry_helpers.py
run/: build.sh  tests.sh
scripts/: bag.sh
test/node/: test_base_node.py
test/unit/: _test_base_unit.py  test_base_functions_unit.py  test_odometry_helpers_unit.py
